--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "ejs": "^2.5.2",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
+    "fs": "0.0.1-security",
     "method-override": "^2.3.7",
     "mongoose": "^4.6.8",
-    "multer": "^1.2.0"
+    "multer": "^1.2.0",
+    "multiparty": "^4.1.2"
   }
 }
