--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.14.0",
     "express-session": "^1.14.2",
     "fs": "0.0.1-security",
+    "jquery": "^3.1.1",
     "method-override": "^2.3.7",
     "mongoose": "^4.6.8",
     "multer": "^1.2.0",
